# WeatherProject

./: .gitignore  README.md  api.py  main.py  pyproject.toml  requirements.txt.py
utills/: __init__.py  city_list.py
